@@ -156,20 +156,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|crypto
-operator|.
-name|CryptoCodec
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|fs
 operator|.
 name|permission
@@ -560,11 +546,6 @@ DECL|field|dfs
 name|DFSClient
 name|dfs
 decl_stmt|;
-DECL|field|factory
-specifier|final
-name|CryptoCodec
-name|factory
-decl_stmt|;
 DECL|field|verifyChecksum
 specifier|private
 name|boolean
@@ -674,17 +655,6 @@ name|conf
 argument_list|,
 name|getStatistics
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|factory
-operator|=
-name|CryptoCodec
-operator|.
-name|getInstance
-argument_list|(
-name|conf
 argument_list|)
 expr_stmt|;
 block|}
