@@ -459,6 +459,9 @@ Release 2.7.0 - UNRELEASED
 
     HDFS-7513. HDFS inotify: add defaultBlockSize to CreateEvent (cmccabe)
 
+    HDFS-7536. Remove unused CryptoCodec in org.apache.hadoop.fs.Hdfs.
+    (Yi Liu via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-7454. Reduce memory footprint for AclEntries in NameNode.
